--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="no_photo_url">https://uwosh.edu/facilities/wp-content/uploads/sites/105/2018/09/no-photo.png</string>
 
     <string name="no_genre">N/A</string>
+    <string name="selected_item">selected_item</string>
+    <string name="item_image">item_image</string>
 </resources>
